tests/lex/invalid/hex_literal_extra_underscore.zn
def f() {
    var x = 0xa__b;
}
